Changelog
=========


2.1.5 (unreleased)
------------------

- Nothing changed yet.


2.1.4 (2012-03-29)
------------------

- Dossier details PDF: Using ordering from tabbed view for all types
  [lgraf]

- Dossier details PDF: Also list emails
  [lgraf]

- Dossier details PDF: Use ordering from documents tab to sort docs
  [lgraf]


2.1.3 (2012-03-28)
------------------

- Fixed display of newlines in the dossier description (Dossiercover PDF).
  Issue #1463 Anpassung Deckblatt Dossier/Subdossier
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1463/
  [phgross]


2.1.2 (2012-03-02)
------------------

- Fixed condition_expr for pdf-open-task-report action
  [lgraf]



2.1.1 (2012-03-01)
------------------

- Dossier Cover PDF: Display main dossier title for subdossier.
  Issue #1430 Deckblatt PDF: Hauptdossier Titel darstellen bei Subdossiers
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1430/view
  [phgross]


2.1 (2012-02-27)
----------------

- Fix issuer client in task PDFs, so that it also works correct when we have a predecessor.
  Issue #1412 Optimierung Mandant des Auftraggebers
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1412
  [jone]

- Issue #1374 Pedenzenliste (PDF).
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1374/
  [jone]

- Optimize dossier details PDF export.
  Show reference number always, add / rename some columns in listings.
  Use landscape pages for tables to gain width.
  Issue #1347 Ueberarbeitung Dossier Details (PDF)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1347/
  [jone]

- Added French translations.
  [ttschanz]

- Tasklisting PDF optimizations.
  Issue #1331 Anpassung am PDF-Aufgabenverzeichnis
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1331/
  [jone]

- Dossier details PDF: Change headings and display filing prefix, if set.