@@ -5,6 +5,7 @@ from five import grok
 from ftw.pdfgenerator.browser.views import ExportPDFView
 from ftw.pdfgenerator.interfaces import ILaTeXLayout
 from ftw.pdfgenerator.interfaces import ILaTeXView
+from ftw.pdfgenerator.utils import provide_request_layer
 from ftw.pdfgenerator.view import MakoLaTeXView
 from ftw.table import helper
 from opengever.base.interfaces import IReferenceNumber
@@ -24,7 +25,6 @@ from opengever.task.helper import task_type_helper
 from zope.component import getUtility
 from zope.i18n import translate
 from zope.interface import Interface
-from zope.interface import directlyProvidedBy, directlyProvides
 from zope.schema import vocabulary
 
 
@@ -40,10 +40,7 @@ class DossierDetailsPDFView(grok.View, ExportPDFView):
 
     def render(self):
         # Enable IDossierDetailsLayer
-        if not IDossierDetailsLayer.providedBy(self.request):
-            ifaces = [IDossierDetailsLayer] + list(directlyProvidedBy(
-                    self.request))
-            directlyProvides(self.request, *ifaces)
+        provide_request_layer(self.request, IDossierDetailsLayer)
 
         return ExportPDFView.__call__(self)
 
